fix header overflow bug

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -73,10 +73,15 @@ a {
     }
     .navbar-brand {
         font-weight: 700;
+        padding: 17px 10px;
         &:focus {
             outline: none;
         }
     }
+    @media(min-width:768px) {
+        padding: 17px 40px;
+    }
+
     a {
         color: white;
     }
@@ -109,9 +114,8 @@ a {
         }
     }
     @media(min-width:768px) {
-        padding: 20px 0;
         border-bottom: none;
-        letter-spacing: 1px;
+        letter-spacing: 7px;
         background: transparent;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
